# pd2-ra-launcher

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: tauri-action.yml
src/: App.css  App.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AboutTab.tsx  Button.tsx  GameTab.tsx  LinuxTab.tsx  Play.tsx  PreferencesTab.tsx  SettingsModal.tsx  TitleBar.tsx
src/constants/: index.ts
src/hooks/: useAutoUpdater.ts  useSettings.ts
src/types/: settings.ts
src/util/: fileSync.ts  loadSavePathFromGameSettings.ts  settings.ts  syncSavePath.ts
